--- a/test/css/style.css
+++ b/test/css/style.css
@@ -34,6 +34,7 @@ body {
   border-bottom: 8px solid #222;
   background-color: rgba(0, 0, 0, 0.8);
   position: relative;
+  overflow-x: hidden;
 }
 
 .heading:after {
@@ -67,6 +68,7 @@ body {
   width: 100%;
   border-bottom: 8px solid #222;
   background-color: #000;
+  overflow-x: hidden;
 }
 
 .left {
