--- a/test/css/style.css
+++ b/test/css/style.css
@@ -34,7 +34,7 @@ body {
   border-bottom: 8px solid #222;
   background-color: rgba(0, 0, 0, 0.8);
   position: relative;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 .heading:after {
@@ -66,10 +66,10 @@ body {
 .flexer {
   display: flex;
   width: 100%;
+  height: 1200px;
   border-bottom: 8px solid #222;
   background-color: #000;
-  overflow-x: hidden;
-  position:relative;
+  overflow: hidden;
 }
 
 .left {
@@ -140,37 +140,37 @@ body {
 
 .box1 {
   top: 150px;
-  left: -300px;
+  left: -50%;
   transform: translateX(-50%);
 }
 
 .box2 {
   top: 150px;
-  right: -300px;
+  right: -50%;
   transform: translateX(50%);
 }
 
 .box3 {
   top: 450px;
-  left: -300px;
+  left: -50%;
   transform: translateX(-50%);
 }
 
 .box4 {
   top: 450px;
-  right: -300px;
+  right: -50%;
   transform: translateX(50%);
 }
 
 .box5 {
   top: 750px;
-  left: -300px;
+  left: -50%;
   transform: translateX(-50%);
 }
 
 .box6 {
   top: 750px;
-  right: -300px;
+  right: -50%;
   transform: translateX(50%);
 }
 
